[package]
name = "spoolq"
version = "0.2.3"
description = "A durable queue backed by filesystem storage"
license = "Apache-2.0"
authors = ["Casey Marshall <github@cmars.tech>"]
repository = "https://github.com/cmars/spoolq"

[dependencies]
futures = "0.1"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
textnonce = "0.4.1"

